chore: provide environment variable for header token

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,3 +6,4 @@ services:
       - "9000:9000"
     environment:
       - FLASK_ENV=development
+      - HEADER_TOKEN=7929adaa-625d-11ee-8c99-0242ac120002
