--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,12 @@
 version: '3.8'
 services:
-  web:
+  api-ramq-reader:
     build: .
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
     ports:
       - "10000:10000"
     environment:
