--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ psutil==5.9.5
 pydantic==1.10.9
 pydantic_core==2.10.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 regex==2023.8.8
