--- a/requirements_docker.txt
+++ b/requirements_docker.txt
@@ -43,6 +43,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
+Pillow==10.1.0
 regex==2023.8.8
 requests==2.31.0
 requests-oauthlib==1.3.1
