--- a/.github/workflows/ramq_tests.yml
+++ b/.github/workflows/ramq_tests.yml
@@ -19,11 +19,10 @@ jobs:
       with:
         python-version: '3.12'
 
-    - name: Install Python dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install wheel setuptools
-        pip install -r requirements.txt --no-cache-dir
+        pip install -r requirements.txt
         pip install pytest pytest-cov
 
     - name: Run tests
