--- a/requirements_docker.txt
+++ b/requirements_docker.txt
@@ -1,6 +1,7 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.5.0
+anthropic==0.45.2
 anyio==3.7.1
 async-timeout==4.0.3
 atlassian-python-api==3.41.2
@@ -23,8 +24,6 @@ jsonpatch==1.33
 jsonpointer==2.4
 langchain==0.0.306
 langsmith==0.0.41
-llama-hub==0.0.22
-llama-index==0.8.2.post1
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 multidict==6.0.4
@@ -62,4 +61,3 @@ urllib3==1.26.17
 Werkzeug==3.0.0
 wrapt==1.15.0
 yarl==1.9.2
-llama-index-multi-modal-llms-anthropic==0.1.4
